@@ -9,7 +9,10 @@ Version 1.13.4+dev:
    * Add highlight=yes|no to [scroll_to], [scroll_to_unit], [message]
      Defaults to no in the first two cases, yes in the third
      If yes, the target hex is outlined.
-   * New ~SCALE_INTO(w,h) IPF which preserves aspect ratio, using NN.
+   * New ~SCALE_INTO(w,h) IPF which preserves aspect ratio, using bilinear
+     interlopation scaling.
+   * New ~SCALE_INTO_SHARP(w,h) IPF which preserves aspect ratio, using
+     nearest neighbor scaling.
  * Lua API:
    * wesnoth.match_unit can now take a location (rather than a unit) as
      the optional third parameter. This will cause the filter to consider
